# OpenMPExample

./: CMakeLists.txt  Note.md  README.md  slice.pptx  slide.pptx
src/: data_clause.cpp  hello.cpp  hello_for.cpp  inner_product.cpp  matrix_vector.cpp  vector_norm.cpp
